# FunnelPathFinder

./: CMakeLists.txt  README.md  data.json  data2.json  funnel_visualization.avi  funnel_visualization2.avi
src/: main.cpp
